# Research_Agent

./: .gitignore  README.md  app.py  full_system_plan.md  main.py  pyproject.toml  requirements.txt
ai-frontend/: package-lock.json  package.json
ai-frontend/src/: App.css  App.js
ai-frontend/src/components/: ChatArea.jsx  InputBar.jsx  LoginModal.jsx  Message.jsx  Sidebar.jsx  Topbar.jsx
backend/: .env.example  .gitignore  README.md  Research_Agent.postman_collection.json  app.py  docker-compose.yml  pyproject.toml  requirements.txt
backend/src/: .env.example  auth.py  config.py  constants.py
backend/src/Research_Agent/: ADVERSARIAL_STRATEGY.md  README.md
backend/src/Research_Agent/LLMS/: groqllm.py
backend/src/Research_Agent/graph/: graph_builder.py
backend/src/Research_Agent/nodes/: __init__.py  analyze_node.py  basic_chatbot_node.py  blueteam_node.py  classify_node.py  expert_node.py  moderator_node.py  panel_generator_node.py  present_node.py  research_node.py
backend/src/Research_Agent/state/: state.py
backend/src/Research_Agent/testing/: test_db.py  test_gauntlet.py
backend/src/Research_Agent/tools/: __init__.py
backend/src/db/: chat_history.py  mongo_client.py  session_store.py  user_store.py
backend/src/exception/: exception.py
backend/src/logging/: logger.py
backend/src/routers/: __init__.py  auth.py  chat.py  history.py  index.py  sessions.py
frontend/: .env.example  app.py  requirements.txt
frontend/.streamlit/: config.toml
frontend/components/: chat_area.py  input_bar.py  sidebar.py
frontend/services/: api.py  firebase_auth.py  native_auth.py
src/: __init__.py  constants.py
src/Research_Agent/: __init__.py  main.py
src/Research_Agent/LLMS/: __init__.py  geminillm.py  groqllm.py
src/Research_Agent/graph/: __init__.py  graph_builder.py
(+13 files in other folders)
